solved queu ew linked lis tinstead of array list