@@ -1,32 +1,28 @@
 package org.example.dsa.week1;
 
+import javax.swing.event.CellEditorListener;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.NoSuchElementException;
 
 public class MyQueue<T> {
 
-    private ArrayList<T> elements = new ArrayList<>();
+    private LinkedList<T> elements = new LinkedList<T>();
 
     public void enqueue(T item) {
-        elements.add(elements.size(),item);
+        elements.addFirst(item);
     }
 
     /** @throws NoSuchElementException if the queue is empty */
     public T dequeue() {
-        if (elements.isEmpty()){
-            throw new NoSuchElementException();
-        }
-        T headElement = elements.get(0);
-        elements.remove(0);
-        return headElement;
+        if (elements.isEmpty()) throw new NoSuchElementException();
+        return elements.removeLast();
     }
 
     /** @throws NoSuchElementException if the queue is empty */
     public T peek() {
-        if (elements.isEmpty()) {
-            throw new NoSuchElementException();
-        }
-        return elements.get(elements.size()-1);
+        if (elements.isEmpty()) throw new NoSuchElementException();
+        return elements.peekLast();
     }
 
     public boolean isEmpty() {
